--- a/requirements.txt
+++ b/requirements.txt
@@ -1,240 +1,23 @@
-absl-py==2.0.0
-accelerate==0.24.1
-aenum==3.1.15
-aiohttp==3.8.6
-aiosignal==1.3.1
-aiostream==0.5.2
-alembic==1.12.1
-annotated-types==0.6.0
-anyio==3.7.1
-appnope==0.1.3
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==23.1.0
-Babel==2.13.1
-beautifulsoup4==4.12.2
-bleach==6.1.0
-blinker==1.7.0
-blis==0.7.11
-bottle==0.12.25
-cachetools==5.3.2
-catalogue==2.0.10
-certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-cloudpickle==2.2.1
-colorlog==6.7.0
-comm==0.2.0
-confection==0.1.3
-contourpy==1.2.0
-cycler==0.12.1
-cymem==2.0.8
-databricks-cli==0.18.0
-dataclasses-json==0.5.14
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-distro==1.8.0
-docker==6.1.3
-entrypoints==0.4
-exceptiongroup==1.1.3
-executing==2.0.1
-fastjsonschema==2.19.0
-filelock==3.13.1
-Flask==3.0.0
-flatbuffers==23.5.26
-fonttools==4.44.3
-fqdn==1.5.1
-frozenlist==1.4.0
-fsspec==2023.10.0
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.40
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-pasta==0.2.0
-gradientai==1.2.0
-greenlet==3.0.1
-grpcio==1.59.3
-gunicorn==21.2.0
-h11==0.14.0
-h5py==3.10.0
-httpcore==1.0.2
-httpx==0.25.1
-huggingface-hub==0.19.4
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.1
-ipykernel==6.26.0
-ipython==8.17.2
-ipywidgets==8.1.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.0
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.10.1
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.8
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-jupyterlab_server==2.25.2
-keras==2.15.0
-kiwisolver==1.4.5
-langchain==0.0.336
-langcodes==3.3.0
-langsmith==0.0.64
-libclang==16.0.6
-llama-index==0.9.3.post1
-llama2==0.0.1.dev0
-Mako==1.3.0
-Markdown==3.5.1
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mistune==3.0.2
-ml-dtypes==0.2.0
 mlflow==2.8.1
-mpmath==1.3.0
-multidict==6.0.4
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-nbclient==0.9.0
-nbconvert==7.11.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.0.6
-notebook_shim==0.2.3
+astunparse==1.6.3
+cloudpickle==2.2.1
 numpy==1.26.2
-oauthlib==3.2.2
-openai==1.3.3
-opt-einsum==3.3.0
-optuna==3.4.0
-optuna-dashboard==0.13.0
-overrides==7.4.0
 packaging==23.2
 pandas==2.1.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pi==0.1.2
-Pillow==10.1.0
-platformdirs==4.0.0
-plotly==5.18.0
-preshed==3.0.9
-prometheus-client==0.18.0
-prompt-toolkit==3.0.41
-protobuf==4.23.4
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==14.0.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==1.10.13
-pydantic_core==2.14.3
-Pygments==2.16.1
-PyJWT==2.8.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==25.1.1
-qtconsole==5.5.1
-QtPy==2.4.1
-querystring-parser==1.2.4
-referencing==0.31.0
-regex==2023.10.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.13.0
-rsa==4.9
-safetensors==0.4.0
-scikit-learn==1.3.2
-scipy==1.11.3
-seaborn==0.13.0
-Send2Trash==1.8.2
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-spacy==3.7.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==1.4.50
-sqlparse==0.4.4
-srsly==2.4.8
-stack-data==0.6.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.15.0
-tensorflow-metal==1.1.0
-termcolor==2.3.0
-terminado==0.18.0
-thinc==8.2.1
-threadpoolctl==3.2.0
-tiktoken==0.5.1
-tinycss2==1.2.1
-tokenizers==0.15.0
-tomli==2.0.1
+pyyaml==6.0.1
 torch==2.1.1
+tqdm==4.66.1
+plotly==5.18.0
+transformers==4.35.2
+tokenizers==0.15.0
+sentence-transformers==2.2.2
+matplotlib==3.8.2
+plotly==5.18.0
 torchdata==0.7.1
 torchtext==0.16.1
 torchvision==0.16.1
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.13.0
-transformers==4.35.2
-typer==0.9.0
-types-python-dateutil==2.8.19.14
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-uri-template==1.3.0
-urllib3==1.26.18
-wasabi==1.1.2
-wcwidth==0.2.10
-weasel==0.3.4
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.4
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-wrapt==1.14.1
-yarl==1.9.2
-zipp==3.17.0
+SQLAlchemy==1.4.50
+sqlparse==0.4.4
+optuna==3.4.0
+```
+
