--- a/mlruns/150215017589734255/b11230e42e11473e881ec3d14f353302/meta.yaml
+++ b/mlruns/150215017589734255/b11230e42e11473e881ec3d14f353302/meta.yaml
@@ -1,5 +1,5 @@
 artifact_uri: file:///Users/ahmedjawad/Documents/Job%20Search/Ultimate%20AI%20Challenge/ultimate_aiv2/mlruns/150215017589734255/b11230e42e11473e881ec3d14f353302/artifacts
-end_time: null
+end_time: 1700666017940
 entry_point_name: ''
 experiment_id: '150215017589734255'
 lifecycle_stage: active
@@ -10,6 +10,6 @@ source_name: ''
 source_type: 4
 source_version: ''
 start_time: 1700665964164
-status: 1
+status: 3
 tags: []
 user_id: ahmedjawad
